--- a/_posts/workshops/2018-06-28-paper-cut.markdown
+++ b/_posts/workshops/2018-06-28-paper-cut.markdown
@@ -11,7 +11,7 @@ categories: workshops
 imageUrl: /assets/images/workshops/paper-cut/main.jpg
 imageUrlAlt: papercutting art
 ---
-Craft your stress away through our papercutting workshop! Express your creativity and learn the essential papercutting techniques to create your own glass framed papercutting art!
+Learn something new this summer and craft your stress away through our papercutting workshop! Express your creativity and learn the essential papercutting techniques to create your own glass framed papercutting art!
 
 
 ** STRICTLY should be in the event by 1:15 PM the LATEST.
@@ -37,5 +37,7 @@ Craft your stress away through our papercutting workshop! Express your creativit
 
 <br>
 <br>
+<br>
+*This is a summer workshop from Builtable Coworking.*
 <br>
 *Builtable Coworking provides maker workshops in Shaw Boulevard, Mandaluyong city Philippines* 
