workshops to show slots left

--- a/_posts/workshops/2018-05-09-seo-101.markdown
+++ b/_posts/workshops/2018-05-09-seo-101.markdown
@@ -10,6 +10,8 @@ price: "900"
 categories: workshops
 imageUrl: /assets/images/workshops/seo-101/main.jpg
 imageUrlAlt: Basics of SEO.
+currentAttendees: 0
+totalAttendees: 20
 ---
 
 
