--- a/_posts/workshops/2018-07-07-dry-clay.markdown
+++ b/_posts/workshops/2018-07-07-dry-clay.markdown
@@ -33,6 +33,6 @@ Other sample works of [Little Figure Shop](https://facebookcompepot09.wordpress.
 <br>
 <br>
 <br>
-*This is a summer workshop from Builtable Coworking.*
+*This is a  workshop from Builtable Coworking.*
 <br>
 *Builtable Coworking provides maker workshops in Shaw Boulevard, Mandaluyong city Philippines* 
