--- a/_posts/workshops/2018-05-09-seo-101.markdown
+++ b/_posts/workshops/2018-05-09-seo-101.markdown
@@ -34,4 +34,4 @@ Make every post you publish rank in Google.
 <br>
 <br>
 <br>
-*Builtable Coworking provides maker workshops in Shaw Boulevard, Mandaluyong city Philippines* 
+*Builtable Coworking provides maker workshops in Manila, Philippines* 
