--- a/_posts/workshops/2018-06-28-paper-cut.markdown
+++ b/_posts/workshops/2018-06-28-paper-cut.markdown
@@ -43,4 +43,4 @@ Learn something new this  and craft your stress away through our papercutting wo
 <br>
 *This is a  workshop from Builtable Coworking.*
 <br>
-*Builtable Coworking provides maker workshops in Shaw Boulevard, Mandaluyong city Philippines* 
+*Builtable Coworking provides maker workshops in Manila, Philippines* 
