--- a/_posts/workshops/2018-07-07-dry-clay.markdown
+++ b/_posts/workshops/2018-07-07-dry-clay.markdown
@@ -36,4 +36,4 @@ Other sample works of [Little Figure Shop](https://facebookcompepot09.wordpress.
 <br>
 *This is a  workshop from Builtable Coworking.*
 <br>
-*Builtable Coworking provides maker workshops in Shaw Boulevard, Mandaluyong city Philippines* 
+*Builtable Coworking provides maker workshops in Manila, Philippines* 
